# tortoise-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
bot/: __main__.py  api_client.py  bot.py  constants.py  manager.py
bot/cogs/: afk.py  anti_raid.py  button_utility.py  challenge.py  challenges.py  github.py  giveaway.py  health.py  join_manager.py  leaderboard.py  misc.py  moderation.py  reddit.py  role_progression.py  runtime.py  security.py  spam_filter.py  teams.py  tortoise_api.py  tortoise_dm.py  tortoise_server.py  utility.py
bot/docs/: challenge.md
bot/docs/assets/challenge-examples/: cpp-boilerplate.cpp  expected-outputs.json  java-boilerplate.java  javascript-submission.js  python-boilerplate.py  python-submission.py  statement.md  test-inputs.json
bot/utils/: challenge.py  checks.py  embed_handler.py
dev/: constants.py
docs/: whiteboard.excalidraw
docs/assets/challenge-examples/: cpp-submission.cpp  java-submission.java  javascript-boilerplate.js
