[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tortoise-bot"
version = "0.1.0"
description = "Fully functional Bot for Discord coded in Discord.py"
authors = ["Tortoise Community <your-email@example.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = ">3.12,<3.15"
python-dotenv = "*"
psutil = "*"
youtube-dl = "*"
python-dateutil = "*"
aenum = "*"
beautifulsoup4 = "*"
async-cse = "*"
lxml = "*"
asyncpraw = "*"
discord-py = {extras = ["voice"], version = "^2.0"}
asyncpg = "^0.31.0"
numpy = "^2.4.6"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pre-commit = "*"

[tool.poetry.scripts]
start = "bot.__main__:main"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://pytorch.org"
priority = "explicit"

